--- a/assets/styles/layout/_footer.sass
+++ b/assets/styles/layout/_footer.sass
@@ -7,10 +7,15 @@
   border-radius: em(5)
   
 .footer
-  display: grid
-  gap: 3em
+  // display: grid
+  // gap: 3em
   color: #949494
+  background-color: var(--black)
   padding-bottom: 2em
+
+  .logo
+    width: em(200)
+    fill: var(--white)
 
 .copy
   flex-direction: column
