--- a/assets/styles/pages/_home.sass
+++ b/assets/styles/pages/_home.sass
@@ -145,14 +145,7 @@
     width: 2em
     fill: var(--white)
 
-.line
-  display: block
-  height: em(1)
-  background-color: var(--border)
-  margin-bottom: 1em
-
-
-+padding(5,'bottom')
++p(5,'bottom')
 
 .reflink
   display: inline-block
