--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   {{- $pageTitle := "" -}}
   {{- if .IsHome -}}
-  {{- $pageTitle = printf "%s | Web Designer | Nassau, Bahamas" .Site.Title -}}
+  {{- $pageTitle = printf "%s | The Bahamas' Leader in News, Business, Sports, and Insights" .Site.Title -}}
   {{- else -}}
   {{- $pageTitle = printf "%s | %s" .Title .Site.Title -}}
   {{- end -}}
