--- a/assets/styles/base/_reset.sass
+++ b/assets/styles/base/_reset.sass
@@ -60,6 +60,11 @@ body
   line-height: 2
   overflow-x: hidden
 
+main
+  font:
+    family: 'Playfair Display'
+    weight: 400
+
 body, h1, h2, h3, h4, h5, h6, p, figure, blockquote, dl, dd
   margin: 0
 
