--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,6 +1,15 @@
 {{- define "main" -}}
   {{- .Store.Set "hasTwic" true -}}
   {{- .Store.Set "hasObscure" true -}}
+  
+  <section>
+    <ul>
+      
+      <li>
+        <h2>Fox’s Balmoral Island lease could face legal challenge from former MP</h2>
+        <p class="[ summary ]">Former Cabinet minister Damian Gomez KC is considering legal action against the Bahamian government's decision to lease a portion of Balmoral Island to Adrian Fox for a proposed $300 million resort project.</p>
+      </li>
+    </ul>
 
-<h1>Hello</h1>
+  </section>
 {{- end -}}
