--- a/assets/styles/base/_typography.sass
+++ b/assets/styles/base/_typography.sass
@@ -9,24 +9,24 @@ h1, h2, h3, h4, h5, h6
     color: inherit
     font-weight: inherit
 
-  // var(--step-4)
-  // font-size: var(--step-3)
 
 h1,.font--1
-  font-size: var(--step-2)
+  font-size: var(--step-4)
 
 h2,.font--2
-  font-size: var(--step-1)
+  font-size: var(--step-3)
 
 h3,.font--3
-  font-size: var(--step-0)
+  font-size: var(--step-2)
 
 h4,.font--4
-  font-size: var(--step--1)
+  font-size: var(--step-1)
 
 // h5,.font--5
+  // font-size: var(--step-0)
 
 // h6,.font--6
+  // font-size: var(--step--1)
 
 p
   padding-bottom: 1em
