--- a/assets/styles/layout/_main.sass
+++ b/assets/styles/layout/_main.sass
@@ -61,8 +61,8 @@ body
 
 .content-grid
   --padding-inline: 1em
-  --content-max-width: 80ch
-  --breakout-max-width: 90ch
+  --content-max-width: #{em(1200)}
+  --breakout-max-width: #{em(1250)}
 
   --content-size: min(100% - (var(--padding-inline) * 2), var(--content-max-width))
   --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2)
