--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,11 @@
 {{ define "main" }}
 <article>
   <h1>{{ .Title }}</h1>
-  {{ .Content }}
+  {{ range .Pages }}
+  <li>
+    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+    <p>{{ .Summary }}</p>
+  </li>
+  {{ end }}
 </article>
 {{ end }}
