--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -33,7 +33,7 @@
     <div class="[ navigation--desktop ]">
       <b class="[ line line--top ]"></b>
       <b class="[ line ]"></b>
-      <nav class="[ nav ][ flex center ]">
+      <!-- <nav class="[ nav ][ flex center ]">
         <ul class="[ menu ][ flex ]">
           {{ range $key, $category := .Site.Data.categories }}
             <li class="[ menu__item ][ font--700 ]">
@@ -41,7 +41,7 @@
             </li>
           {{ end }}
         </ul>
-      </nav>
+      </nav> -->
       <b class="[ line ]"></b>
     </div>
     <!-- Main Navigation - End -->
