--- a/assets/styles/abstracts/_mixins.sass
+++ b/assets/styles/abstracts/_mixins.sass
@@ -1,13 +1,15 @@
 
 @use 'sass:meta'
+@use 'variables' as *
 @use 'functions' as *
 
+// Interpolation Mixin
 =interpolate($property, $min-size, $max-size, $min-vw, $max-vw)
   #{$property}: clamp($min-size, calc-interpolation($min-vw, $min-size, $max-vw, $max-size), $max-size)
 
-
-=fluid($val, $sm, $lg)
-  +interpolate($val, $min-viewport-width-in-rem, $max-viewport-width-in-rem, m($sm), d($lg))
+// Fluid Mixin
+=fluid($property, $sm, $lg)
+  +interpolate($property, m($sm), d($lg), m($min-screen-size), d($max-screen-size))
 
 =breakpoint($size)
   @if $size == phone
