--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -58,8 +58,8 @@
   {{- if .Store.Get "hasCode" -}}
   <script src="/scripts/prism-{{- .Site.Params.Version -}}.min.js" async></script>
   {{- end -}} 
-  <link rel="icon" type="image/png" href="/favicon-light.svg" media="(prefers-color-scheme: light)">
-  <link rel="icon" type="image/png" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
+  <link rel="icon" type="image/svg+xml" href="/favicon-light.svg" media="(prefers-color-scheme: light)">
+  <link rel="icon" type="image/svg+xml" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
   <link rel="mask-icon" href="/favicon-light.svg" color="#9395A1">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
