--- a/assets/styles/abstracts/_variables.sass
+++ b/assets/styles/abstracts/_variables.sass
@@ -3,11 +3,15 @@
 
 // Enter site width value without 'px' suffix
 
-// MinMax Font Size
+// Font Size
 $min-font-size: 16
 $max-font-size: 18
 
-// MinMax Viewport
+// Type Scale
+$min-scale: 1.2      // Minor Third
+$max-scale: 1.25     // Major Third
+
+// Viewport Size
 $min-screen-size: 321
 $max-screen-size: 1300
 
