--- a/assets/styles/base/_reset.sass
+++ b/assets/styles/base/_reset.sass
@@ -15,26 +15,25 @@
   --code-color: rgb(155, 157, 157)
   --code-background: rgb(35, 35, 35)
   --monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace
-  
-  --step--2: clamp(0.64rem, 0.7403rem + -0.2292vw, 0.6944rem)
-  --step--1: clamp(0.8rem, 0.8614rem + -0.1404vw, 0.8333rem)
-  --step-0: clamp(1rem, 1rem + 0vw, 1rem)
-  --step-1: clamp(1.2rem, 1.1579rem + 0.2105vw, 1.25rem)
-  --step-2: clamp(1.44rem, 1.3368rem + 0.5158vw, 1.5625rem)
-  --step-3: clamp(1.728rem, 1.5384rem + 0.9479vw, 1.9531rem)
-  --step-4: clamp(2.0736rem, 1.7639rem + 1.5487vw, 2.4414rem)
-  --step-5: clamp(2.4883rem, 2.0138rem + 2.3724vw, 3.0518rem)
+  $headings: (h1: 6, h2: 3, h3: 2, h4: 1, h5: 0, h6: -1)
 
-  --color-fg-default:#c9d1d9
-  --color-bg-code-block:#161b22
-  --color-bg-inline-code-block: #212830
-  --color-gray:#8b949e
-  --color-red:#ff7b72
-  --color-green:#7ee787
-  --color-blue:#79c0ff
-  --color-indigo:#a5d6ff
-  --color-purple:#d2a8ff
-  --color-brown:#ffa657
+  @each $tag, $step in $headings
+    $min-size: type-scale($step, $min-font-size, $min-scale)
+    $max-size: type-scale($step, $max-font-size, $max-scale)
+
+    +clamp('--step-#{$step}', $min-size, $max-size)
+  // --step--2: clamp(0.64rem, 0.7403rem + -0.2292vw, 0.6944rem)
+  // --step--1: clamp(0.8rem, 0.8614rem + -0.1404vw, 0.8333rem)
+  // --step-0: clamp(1rem, 1rem + 0vw, 1rem)
+  // --step-1: clamp(1.2rem, 1.1579rem + 0.2105vw, 1.25rem)
+  // --step-2: clamp(1.44rem, 1.3368rem + 0.5158vw, 1.5625rem)
+  // --step-3: clamp(1.728rem, 1.5384rem + 0.9479vw, 1.9531rem)
+  // --step-4: clamp(2.0736rem, 1.7639rem + 1.5487vw, 2.4414rem)
+  // --step-5: clamp(2.4883rem, 2.0138rem + 2.3724vw, 3.0518rem)
+
+  // Content Colors
+
+  --content-tertiary: hsla(0,0%,35.3%,1)
 
 *, *::before, *::after
   box-sizing: inherit
@@ -46,7 +45,8 @@ html
   -webkit-tap-highlight-color: rgba(black, 0)
   scroll-behavior: smooth
   scroll-padding-top: 10em
-  +interpolate(font-size, $min-font-size-in-px, $max-font-size-in-px, $min-viewport-width-in-px, $max-viewport-width-in-px)
+  // +interpolate(font-size, $min-font-size-in-px, $max-font-size-in-px, $min-viewport-width-in-px, $max-viewport-width-in-px)
+  +clamp(font-size, $min-font-size, $max-font-size)
 
 html, body
   overflow-x: hidden
@@ -55,15 +55,13 @@ html, body
 body
   width: 100%
   font:
-    family: system-ui, sans-serif
+    family: system-serif
     weight: 400
-  line-height: 2
+  line-height: 1.6
   overflow-x: hidden
 
-main
-  font:
-    family: 'Playfair Display'
-    weight: 400
+.sans-serif
+  font-family: system-ui, sans-serif
 
 body, h1, h2, h3, h4, h5, h6, p, figure, blockquote, dl, dd
   margin: 0
