--- a/assets/styles/layout/_navbar.sass
+++ b/assets/styles/layout/_navbar.sass
@@ -11,7 +11,7 @@
   
   &__logo
     display: inline-flex
-    +fluid('width', 200, 300)
+    // +fluid('width', 200, 300)
 
 
   &__info
@@ -53,6 +53,7 @@
 
 .menu
   gap: 2em
+  padding: 0.25em 0
 
   &__link
     color: var(--black)
