--- a/assets/styles/pages/_home.sass
+++ b/assets/styles/pages/_home.sass
@@ -187,8 +187,9 @@
     color: var(--color)
 
 .hidden
-  width: 0
-  height: 0
-  visibility: hidden
+  width: 0.1em
+  height: 0.1em
   clip: rect(0 0 0 0)
+  visibility: hidden
   overflow: hidden
+  position: absolute
