--- a/assets/styles/base/_fonts.sass
+++ b/assets/styles/base/_fonts.sass
@@ -1,38 +1,50 @@
-/* cyrillic
 @font-face
-  font-family: 'Playfair Display'
+  font-family: system-serif
   font-style: normal
-  font-weight: 400 900
-  font-display: swap
-  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTjYgEM86xRbPQ.woff2) format("woff2")
-  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
+  font-weight: 300
+  src: local("New York"), local("Times New Roman"), local("Times"), local("Georgia"), local("Cambria"), local("Liberation Serif"), local("Noto Serif"), local("Droid Serif"), local("Serif")
 
-/* vietnamese
 @font-face
-  font-family: 'Playfair Display'
-  font-style: normal
-  font-weight: 400 900
-  font-display: swap
-  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTPYgEM86xRbPQ.woff2) format("woff2")
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB
+  font-family: system-serif
+  font-style: italic
+  font-weight: 300
+  src: local("New York Italic"), local("Times New Roman Italic"), local("Times Italic"), local("Georgia Italic"), local("Cambria Italic"), local("Liberation Serif Italic"), local("Noto Serif Italic"), local("Droid Serif Italic"), local("Serif Italic")
 
-/* latin-ext
 @font-face
-  font-family: 'Playfair Display'
+  font-family: system-serif
   font-style: normal
-  font-weight: 400 900
-  font-display: swap
-  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTLYgEM86xRbPQ.woff2) format("woff2")
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF
+  font-weight: 400
+  src: local("New York"), local("Times New Roman"), local("Times"), local("Georgia"), local("Cambria"), local("Liberation Serif"), local("Noto Serif"), local("Droid Serif"), local("Serif")
 
-/* latin
 @font-face
-  font-family: 'Playfair Display'
+  font-family: system-serif
+  font-style: italic
+  font-weight: 400
+  src: local("New York Italic"), local("Times New Roman Italic"), local("Times Italic"), local("Georgia Italic"), local("Cambria Italic"), local("Liberation Serif Italic"), local("Noto Serif Italic"), local("Droid Serif Italic"), local("Serif Italic")
+
+@font-face
+  font-family: system-serif
   font-style: normal
-  font-weight: 400 900
-  font-display: swap
-  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTzYgEM86xQ.woff2) format("woff2")
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+  font-weight: 500
+  src: local("New York Medium"), local("Times New Roman"), local("Times"), local("Georgia"), local("Cambria"), local("Liberation Serif"), local("Noto Serif Medium"), local("Droid Serif"), local("Serif")
+
+@font-face
+  font-family: system-serif
+  font-style: italic
+  font-weight: 500
+  src: local("New York Medium Italic"), local("Times New Roman Italic"), local("Times Italic"), local("Georgia Italic"), local("Cambria Italic"), local("Liberation Serif Italic"), local("Noto Serif Medium Italic"), local("Droid Serif Italic"), local("Serif Italic")
+
+@font-face
+  font-family: system-serif
+  font-style: normal
+  font-weight: 700
+  src: local("New York Bold"), local("Times New Roman Bold"), local("Times Bold"), local("Georgia Bold"), local("Cambria Bold"), local("Liberation Serif Bold"), local("Noto Serif Bold"), local("Droid Serif Bold"), local("Serif Bold")
+
+@font-face
+  font-family: system-serif
+  font-style: italic
+  font-weight: 700
+  src: local("New York Bold Italic"), local("Times New Roman Bold Italic"), local("Times Bold Italic"), local("Georgia Bold Italic"), local("Cambria Bold Italic"), local("Liberation Serif Bold Italic"), local("Noto Serif Bold Italic"), local("Droid Serif Bold Italic"), local("Serif Bold Italic")
 
   
 @font-face
