--- a/assets/styles/base/_typography.sass
+++ b/assets/styles/base/_typography.sass
@@ -2,7 +2,7 @@
 
 h1, h2, h3, h4, h5, h6
   font-weight: 700
-  line-height: 1.5
+  line-height: 1.25
   padding-bottom: 0.25em
   
   a
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6
 
 
 h1,.font--1
-  font-size: var(--step-4)
+  font-size: var(--step-6)
 
 h2,.font--2
   font-size: var(--step-3)
@@ -22,13 +22,14 @@ h3,.font--3
 h4,.font--4
   font-size: var(--step-1)
 
-// h5,.font--5
-  // font-size: var(--step-0)
+h5,.font--5
+  font-size: var(--step-0)
 
-// h6,.font--6
-  // font-size: var(--step--1)
+h6,.font--6
+  font-size: var(--step--1)
 
 p
+  // line-height: 2
   padding-bottom: 1em
   
 a:not([class])
