--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<header class="[ navbar ][ full-width content-grid ]" id="navbar">
+<header class="[ navbar ][ full-width content-grid sans-serif ]" id="navbar">
   {{ if .IsHome }}
   <h1 class="[ hidden ]">The Tribune | The Bahamas' Leader in News, Business, Sport and Comment</h1>
   {{ end }}
@@ -33,7 +33,7 @@
     <div class="[ navigation--desktop ]">
       <b class="[ line line--top ]"></b>
       <b class="[ line ]"></b>
-      <!-- <nav class="[ nav ][ flex center ]">
+      <nav class="[ nav ][ flex center ]">
         <ul class="[ menu ][ flex ]">
           {{ range $key, $category := .Site.Data.categories }}
             <li class="[ menu__item ][ font--700 ]">
@@ -41,7 +41,7 @@
             </li>
           {{ end }}
         </ul>
-      </nav> -->
+      </nav>
       <b class="[ line ]"></b>
     </div>
     <!-- Main Navigation - End -->
