--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -3,7 +3,7 @@
   {{- .Store.Set "hasObscure" true -}}
   
   <section>
-    <ul>
+    <ul class="[ top-stories ]">
       
       <li>
         <h2>Fox’s Balmoral Island lease could face legal challenge from former MP</h2>
