--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,8 +14,10 @@
     </figure> -->
     <div class="[ meta ][ sans-serif font--small ]">
       <b class="[ line ]"></b>
-      <span>By <a href="">Neil Hartnell</a> | Tribune Business Editor      </span>
-      <time datetime="2008-02-14 20:00">November 15, 2024</time>
+      <p class="[ grid ]">
+        <span>By <a href="#" rel="author">Neil Hartnell</a> | Tribune Business Editor</span>
+        <time datetime="2008-02-14 20:00">November 15, 2024</time>
+      </p>
     </div>
   </div>
   <div class="[ content ][ font--4 ]">
